fix: visibility of buttons via jquery

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -155,7 +155,14 @@ button:hover {
 }
 
 
+.hidden {
+    display:none;
+}
 
+.visible {
+    display:inline-block;
+    width:40%;
+}
 
 
 
